Hopefully fixed off centered rareroom logo on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -115,6 +115,10 @@ main > div > span > span {
 
 main > div > span > span:not(.morse) {
   width: 12rem;
+  min-width: 0;
+  min-height: 0;
+  max-width: 100vw;
+  max-height: 100vh;
 }
 
 main > div > span > span > img {
